--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button type="buttom" class="btn btn-gray" data-num="0">0</button>
             <!-- =  y C (clear)-->
             <button type="buttom" class="btn btn-gray" data-num=".">.</button>
-            <button type="buttom" class="btn-equal">=</button>
+            <button type="buttom" class="btn-equal">=</button><!--removimos el btn por error de undefinded-->
             <button type="buttom" class="btn btn-clear">C</button>
 
 
